--- a/src/pages/pick-shipments-pick/tabs/unpicked-list.html
+++ b/src/pages/pick-shipments-pick/tabs/unpicked-list.html
@@ -22,11 +22,11 @@
         </div>
         <ion-item tappable no-margin no-padding *ngFor="let loc of pickProvider.pickList; let i = index"
                   (click)="openPickItem(item);">
-            <strong>{{loc.LocationID.value}}</strong>
+            <strong>{{loc.LocationID?.value}}</strong>
             <div no-margin no-padding>
                 <ion-row *ngFor="let item of loc.Items">
-                    <ion-col col-5>{{item.InventoryID.value}}</ion-col>
-                    <ion-col col-5>{{item.LotSerialNbr.value}}</ion-col>
+                    <ion-col col-5>{{item.InventoryID?.value}}</ion-col>
+                    <ion-col col-5>{{item.LotSerialNbr?.value}}</ion-col>
                     <ion-col col-2>{{pickProvider.getPendingAllocationQty(item.LineNbr.value, item.SplitLineNbr.value)}}/{{item.RemainingQty}}
                     </ion-col>
                 </ion-row>
