--- a/src/pages/pick-shipments-pick/pick-shipments-pick.html
+++ b/src/pages/pick-shipments-pick/pick-shipments-pick.html
@@ -2,5 +2,5 @@
     <ion-tab [root]="tab1Root" [rootParams]="data" tabTitle="Pick" (closeModal)="dismiss()" tabIcon="cube"></ion-tab>
     <ion-tab [root]="tab2Root" [rootParams]="data" tabTitle="Pending" tabIcon="list-box"
              [tabBadge]="pickProvider.unpickedQty"></ion-tab>
-    <ion-tab [root]="tab3Root" [rootParams]="data" tabTitle="Completed" tabIcon="checkmark-circle"></ion-tab>
+    <ion-tab [root]="tab3Root" [rootParams]="data" tabTitle="Picked" tabIcon="checkmark-circle"></ion-tab>
 </ion-tabs>
