--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -10,7 +10,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Enter Transfers</ion-title>
+        <ion-title>Enter Receipts</ion-title>
 
         <!--<ion-spinner icon="lines" style="position: absolute; right: 25px; top:50%; margin: -15px;"></ion-spinner>-->
     </ion-navbar>
@@ -24,6 +24,7 @@
     </div>
 
     <ion-grid no-padding>
+        <!-- leaving this here for inter-warehouse transfers
         <ion-row>
             <ion-col>
                 <ion-item no-padding>
@@ -32,17 +33,8 @@
                                (keyup.enter)="setLocation()" autofocus autocorrect="on"></ion-input>
                 </ion-item>
             </ion-col>
-        </ion-row>
+        </ion-row>-->
         <ion-row>
-            <ion-col>
-                <ion-item no-padding>
-                    <ion-label color="primary">To Bin:</ion-label>
-                    <ion-input id="to-location" #tolocation type="text" [(ngModel)]="enteredData.toLocation"
-                               (keyup.enter)="setToLocation()"></ion-input>
-                </ion-item>
-            </ion-col>
-        </ion-row>
-        <ion-row *ngIf="showItem">
             <ion-col>
                 <ion-item no-padding>
                     <ion-label color="primary">Item:</ion-label>
@@ -51,13 +43,24 @@
                 </ion-item>
             </ion-col>
         </ion-row>
+        <ion-row *ngIf="showLocation">
+            <ion-col>
+                <ion-item no-padding>
+                    <ion-label color="primary">To Bin:</ion-label>
+                    <ion-input id="location" #location type="text" [(ngModel)]="enteredData.location"
+                               (keyup.enter)="setLocation()"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+
         <ion-row *ngIf="showQty">
             <ion-col>
                 <ion-item no-padding>
                     <ion-label color="primary">Quantity:</ion-label>
                     <ion-input id="qty" #qty type="number" min="0" [(ngModel)]="enteredData.qty"
-                               (keyup.enter)="setQuantity()"></ion-input>
+                               (keyup.enter)="addReceiptItem()"></ion-input>
                 </ion-item>
+                <ion-label color="primary">Quantity Remaining: {{getRemainingQty()}}</ion-label>
             </ion-col>
         </ion-row>
     </ion-grid>
@@ -66,11 +69,12 @@
 <ion-footer no-shadow>
     <ion-toolbar position="bottom">
         <div class="row">
+            <!-- For inter-warehouse transfers
             <div class="col">
                 <button type="button" ion-button (click)="nextFromBin()">Next</button>
-            </div>
+            </div>-->
             <div class="col">
-                <button type="button" ion-button (click)="commitTransfers()">Commit Transfers</button>
+                <button type="button" ion-button (click)="commitTransfers()">Confirm Receipt</button>
             </div>
         </div>
     </ion-toolbar>
