--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -39,7 +39,7 @@
                 <ion-item no-padding>
                     <ion-label color="primary">Item:</ion-label>
                     <ion-input id="item" #item type="text" [(ngModel)]="enteredData.item"
-                               (keyup.enter)="setItem()"></ion-input>
+                               (keydown.enter)="setItem(); $event.stopPropogation();" (keypress)="$event.stopPropagation();"></ion-input>
                 </ion-item>
             </ion-col>
         </ion-row>
@@ -48,7 +48,7 @@
                 <ion-item no-padding>
                     <ion-label color="primary">To Bin:</ion-label>
                     <ion-input id="location" #location type="text" [(ngModel)]="enteredData.location"
-                               (keyup.enter)="setLocation()"></ion-input>
+                               (keyup.enter)="setLocation(); $event.stopPropogation();" (keypress)="$event.stopPropagation();"></ion-input>
                 </ion-item>
             </ion-col>
         </ion-row>
@@ -58,13 +58,18 @@
                 <ion-item no-padding>
                     <ion-label color="primary">Quantity:</ion-label>
                     <ion-input id="qty" #qty type="number" min="0" [(ngModel)]="enteredData.qty"
-                               (keyup.enter)="addReceiptItem()"></ion-input>
+                               (keyup.enter)="addReceiptItem(); $event.stopPropogation();" (keypress)="$event.stopPropagation();"></ion-input>
                 </ion-item>
                 <ion-label color="primary">Quantity Remaining: {{getRemainingQty()}}</ion-label>
             </ion-col>
         </ion-row>
+        <ion-row *ngIf="showQty">
+            <ion-col>
+                <button type="button" align-self-end ion-button (click)="resetForm()">Cancel</button>
+                <button type="button" align-self-end ion-button (click)="addReceiptItem()">OK</button>
+            </ion-col>
+        </ion-row>
     </ion-grid>
-    <barcode-listener (scan)='onBarcodeScan($event)'></barcode-listener>
 </ion-content>
 <ion-footer no-shadow>
     <ion-toolbar position="bottom">
@@ -74,7 +79,7 @@
                 <button type="button" ion-button (click)="nextFromBin()">Next</button>
             </div>-->
             <div class="col">
-                <button type="button" ion-button (click)="commitTransfers()">Confirm Receipt</button>
+                <button type="button" ion-button (click)="confirmReceipts()">Confirm Receipt</button>
             </div>
         </div>
     </ion-toolbar>
